...
  List<BeamPage> buildPages(BuildContext context, BeamState state) {
    final pages = <BeamPage>[];

    if (state.pathPatternSegments.contains('login')) {
      pages.add(const BeamPage(
        key: ValueKey('login'),
        title: 'Login',
        child: LoginScreen(),
      ));
    }

    if (state.pathPatternSegments.contains('signup')) {
      pages.add(const BeamPage(
...
